--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Flask==0.10.1
-Flask-Bootstrap==3.3.5.6
-Flask-WTF==0.12
-Jinja2==2.8
-MarkupSafe==0.23
-WTForms==2.0.2
-Werkzeug==0.10.4
-argparse==1.2.1
-dominate==2.1.12
-itsdangerous==0.24
-requests==2.7.0
-uWSGI==2.0.11.1
-wsgiref==0.1.2
+Flask
+Flask-Bootstrap
+Flask-WTF
+Jinja2
+MarkupSafe
+WTForms
+Werkzeug
+argparse
+dominate
+itsdangerous
+requests
+uWSGI
+wsgiref
